fix: sort transitive, fix typo, fix cvss
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>